<resources>
    <string name="app_name">Справочник грибника</string>
    <string name="buttonSeasons">Сезоны</string>
    <string name="buttonBerries">Ягоды</string>
    <string name="buttonMushrooms">Грибы</string>
    <string name="buttonPlants">Растения</string>
    <string name="buttonFavorites">Избранное</string>
    <string name="menu_about">О программе</string>
    <string name="menu_close">Закрыть</string>
    <string name="menu_text">Справочник грибника 1.0\nАвторские права (С) 2017\nСвободное распространение\nРазработал: Аксенчик Вадим\nEmail:ix.variant@gmail.com</string>
    <string name="menu_info">Информация</string>
    <string name="menu_info_text_mushrooms">
        Грибы собирают рано утром до того, как их нагреет солнце. В таком случае их можно будет хранить более длительное время.
        Не собирайте старые, переросшие грибы. В них накапливаются вредные для человека продукты и впитывают из окружающей среды посторонние вещества.
        Собранные грибы сразу же очищают от приставшей к ним земли, листьев, хвои, травы и другого мусора.
        Класть грибы в корзину правильнее шляпками вниз — так они лучше сохраняются.
    </string>
    <string name="menu_info_text_berries">
        При сборе ягоды не используйте совки, гребенки и прочие механические приспособления. Они повреждают плодоносные ягодники, вредят будущему урожаю и нередко портят сами ягоды.
        Старайтесь собирать максимально зрелые ягоды — так как после сбора полноценно они не дозревают.
        Лучше всего собирать ягоду в прохладные часы (утром и вечером).
        Собранную ягоду при переноске защищайте от прямых солнечных лучей.
    </string>
    <string name="menu_info_text_plants">
        Cбор наздемных частей растений, и в особенности цветов, возможен лишь в сухую погоду. Дождитесь, когда спадет роса, — и можно приступать.
        Растения, содержащие эфирные масла, предпочтительно собирать в жаркую, солнечную погоду.
        Отправляясь за травами, вооружитесь ножницами или острым секатором, ножом.
        Не следует рвать стебли руками — слишком велика вероятность повредить растение, вырвать его с корнем или поломать.
        Аккуратно срезаем только то, что нам нужно.
    </string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="other_names">Другие названия: \n</string>
    <string name="seasons">\nСезон: \n</string>
    <string name="place">\nМеста обитания: \n</string>
    <string name="description">\nОписание: \n</string>
    <string name="action_info">Информация</string>
    <string name="size_small">Маленький</string>
    <string name="size_mid">Средний</string>
    <string name="size_big">Большой</string>
    <string name="size_none">Отсутствует</string>
    <string name="edible">Съедобные</string>
    <string name="inedible">Несъедобные</string>
    <string name="useful">Полезные</string>
    <string name="poison">Ядовитые</string>
    <string name="conditionally">Условно-съедобные</string>
    <string name="color_white">Белый</string>
    <string name="color_red">Красный</string>
    <string name="color_green">Зеленый</string>
    <string name="color_orange">Оранжевый</string>
    <string name="color_pink">Розовый</string>
    <string name="color_blue">Синий</string>
    <string name="color_black">Чёрный</string>
    <string name="color_yellow">Желтый</string>
    <string name="color_gray">Серый</string>
    <string name="color_purple">Фиолетовый</string>
    <string name="color_brown_light">Бурый</string>
    <string name="color_brown_dark">Бордовый</string>
    <string name="color_brown">Коричневый</string>
    <string name="color_cream">Кремовый</string>
    <string name="season_January">Январь</string>
    <string name="season_February">Февраль</string>
    <string name="season_March">Март</string>
    <string name="season_April">Апрель</string>
    <string name="season_May">Май</string>
    <string name="season_June">Июнь</string>
    <string name="season_July">Июль</string>
    <string name="season_August">Август</string>
    <string name="season_September">Сентябрь</string>
    <string name="season_October">Октябрь</string>
    <string name="season_November">Ноябрь</string>
    <string name="season_December">Декабрь</string>
    <string name="menu_search">Найти...</string>
    <string name="berrie_name_wild_cherry">Дикая вишня</string>
    <string name="berrie_name_wild_cherry_other_names">Prunus fruticosa, Вишня кустарниковая, Степная вишня.</string>
    <string name="berrie_name_wild_cherry_place">Дикая вишня широко распространена от Центральной Европы до Сибири и Северной Азии (северно-восточный Казахстан, южный Урал).</string>
    <string name="berrie_name_wild_cherry_description">Дикая вишня — кустарник, не привышающий 2 м в высоту. Молодые ветки зелёные, затем становятся фиолетово-бурыми, голые.\n\n
    Листья:\n
    &#8226; Форма: в очертании обратнояйцевидные или ланцетовидные,суженные к оснаванию, с тупозубчатым краем.\n
    &#8226; Размер: 3-6 см длиной и 1.5-2.5 см шириной. Черешки до 1.5 см длиной, голые.\n
    &#8226; Цвет: Верхняя поверхность листовой пластинки тёмно-зелёная,голая. Нижняя — светло-зелёная.\n
    &#8226; Дополнительно: прилистинки линейные, зазубренные.\n\n
    Цветки:\n
    &#8226; Форма: Чашелистики прямые или отогнутые. Лепестки обратнояйцевидные, с притупленным концом. Пестик голый.\n
    &#8226; Цвет: Белого цвета\n
    &#8226; Дополнительно: одиночные или собранные в 2-4 в зонтичные соцветия,
    распускаются до появления листьев или одновременно с ним.\n\n
    Плод:\n
    &#8226; Форма: округлая, яйцевидная или грушевидная костянка.\n
    &#8226; Размер: до 2.5 см в диаметре.\n
    &#8226; Цвет: розового, красного или почти чёрного цвета.\n\n
    Примечание: в лечебных целях применяются не только ягоды вишни,
        но и корни, ветки, листья,косточки, приготовленные в виде настоек, отваров.\n\n
    </string>
    <string name="berrie_name_raspberries">Малина</string>
    <string name="berrie_name_raspberries_other_names">Rubus isaeus.</string>
    <string name="berrie_name_raspberries_place">Растёт по вырубкам, лесам, кустарникам, берегам рек.</string>
    <string name="berrie_name_raspberries_description">Малина обыкновенная — листопадный полукустарник с многолетним корневищем, из которого развиваются двухгодичные надземные стебли высотой 1.5-2.5 м.
        \n\nЛистья:\n
        &#8226; Форма: овальные, черешковые, сложные, с 3-7 яйцевидными листочками.\n
        &#8226; Цвет: сверху темно-зеленые, снизу беловатые.\n
        &#8226; Дополнительно: опешены мелкими волосками.
        \n\nЦветки:\n
        &#8226; Форма: собраны в небольшие кистевидные соцветия.\n
        &#8226; Размер: около 1 см в поперечнике.\n
        &#8226; Цвет: белые.\n
        &#8226; Дополнительно: распологаются на верхушках стеблей или в пазухах листьев. Лепестки короче долей чашечки.
        \n\nПлоды:\n
        &#8226; Форма: предостовляют собой небольшие волосистые костянки, срошиеся на цветоножке в сложный плод.\n
        &#8226; Размер: ~1 см.\n
        &#8226; Цвет: красный.\n\n
    </string>
    <string name="berrie_name_wolf_bast">Волчье лыко</string>
    <string name="berrie_name_wolf_bast_other_names">Daphne mezereum, Волчьи ягоды, Плоховец, Пухляк.</string>
    <string name="berrie_name_wolf_bast_place">Встречается почти по всей Европе, в Закавказье (Армения, Азербайджан, север Ирана).
        В России растёт по всей лесной зоне — на севере европейской части России (включая арктический регион) и Западной Сибири
        (по границе с лесостепью; на восток заходит до Байкала), на Северном Кавказе и в Дагестане.
        Растёт чаще в подлеске тёмнохвойных и смешанных лесов, реже в широколиственных лесах лесостепи.
        В южных районах — в субальпийском поясе гор. Хорошо разрастается и ветвится при лёгком осветлении.
        Ареал растения в России сокращается (особенно в южной части).Как заносное, растение натурализовалось повсюду в зоне умеренного климата.</string>
    <string name="berrie_name_wolf_bast_description">Волчеягодник обыкновенный — листопадный маловетвистый кустарник высотой до 1,5 м с крепким стволиком и ветвями, безлистными в нижней части. Корневая система поверхностная. Старые побеги покрыты желтовато-серой морщинистой корой, при основании безлистые, выше — со следами опавших листьев; молодые побеги коротко прижато-опушённые.
        \n\nЛистья:\n
        &#8226; Форма: очередные, узкие, лоснящиеся сверху и сизоватые снизу, по кроям реснитчатые, продолговатые, обратноланцетные, сближенные, расположены на концах побегов на коротких черешках, простые, цельнокрайние.
        &#8226; Размер: 3-8 см длины и 1-2 ширины.\n
        &#8226; Цвет:темно-зеленые.
        \n\nЦветки:\n
        &#8226; Цвет: большей частью розовые, реже белые и других оттенков.\n
        &#8226; Дополнительно: обоеповые, душистые, медоносные, обычно сидящие пучками по два - три - пять или поодиночке на голых побегах в пазухах прошлогодних опавшихлистьев.\n
        \n\nПлоды:\n
        &#8226; Форма: овальная костянка.\n
        &#8226; Размер: 7-12 мм.\n
        &#8226; Дополнительно: косточка широкоовальная.\n\n
        Признаки отравления следующие:\n
        Боль в животе, рвота, понос, моча с кровью, повышенное слюноотделение.\n\n
    </string>
    <string name="berrie_name_raven_eye">Вороний глаз</string>
    <string name="berrie_name_raven_eye_other_names">Paris.</string>
    <string name="berrie_name_raven_eye_place">Растёт в тенистых лесах всей Центральной Европы и лесах умеренного пояса Азии до Камчатки. На Кавказе произрастает Вороний глаз неполный (Paris incompleta),
        в Гималаях — Вороний глаз многолистный (Paris polyphylla) с восемью — десятью листьями под цветком и 4—5-дольными цветками.</string>
    <string name="berrie_name_raven_eye_description">Многолетник высотой до 40 см с ползучим корневищем. Зелёный цветок состоит из четырёх чашелистиков, четырёх лепестков (иногда тех и других вместе бывает 4-6), восьми тычинок и 4-5-гнёздной завязи, превращающейся в чёрную ягоду. Цветёт в июне - июле.
            \n\nЛистья:\n
            &#8226; Форма: жилкование листа у вороньего глаза сетчатое.
            \n\nЦветки:
            &#8226; Форма: состоит из четырех чашелистиков, четырех лепестков( иногда тех и други вместе бывает 4-6).\n
            &#8226; Цвет: зеленые.
            \n\nПлод:\n
            &#8226; Форма: шаровидная.\n
            &#8226; Размер: до 1 см.\n
            &#8226; Цвет: черный.
            \n\Симптомы отравления:\n
            Тошнота, рвота; жжение во рту, глотке, желудке; жидкий стул, рези в животе, колики, головные боли и головокружение.\n\n
    </string>
    <string name="herbs_name_aloe">Алоэ древовидное</string>
    <string name="herbs_name_aloe_other_names">Alóe arboréscens, Столетник.</string>
    <string name="herbs_name_aloe_place">Его естественный ареал охватывает Южную Африку — ЮАР, Мозамбик, Зимбабве, Свазиленд и Малави.
        Натурализировано во многих тропических и умеренных зонах Земного шара.
        На родине произрастает в полупустынных и пустынных районах, на каменистых почвах, среди кустарников.
    </string>
</resources>