<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.example.ixvar.mushroomhandbook.Activity.MainActivity">

    <Button
        android:id="@+id/buttonBerries"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_blueberries"
        android:drawablePadding="3dp"
        android:gravity="left|center_vertical"
        android:onClick="buttonBerriesClick"
        android:text="@string/buttonBerries"
        android:textSize="18sp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonPlants"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/buttonPlants" />

    <Button
        android:id="@+id/buttonMushrooms"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_mushrooms"
        android:drawablePadding="3dp"
        android:gravity="left|center_vertical"
        android:onClick="buttonMushroomsClick"
        android:text="@string/buttonMushrooms"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonBerries"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/buttonBerries" />

    <Button
        android:id="@+id/buttonFavorites"
        android:layout_width="165dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_spider"
        android:drawablePadding="3dp"
        android:gravity="left|center_vertical"
        android:onClick="buttonFavoritesClick"
        android:text="@string/buttonFavorites"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSeasons"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/buttonPlants"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_leaf"
        android:drawablePadding="3dp"
        android:gravity="left|center_vertical"
        android:onClick="buttonPlantsClick"
        android:text="@string/buttonPlants"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/buttonSeasons"
        android:layout_marginLeft="56dp" />

    <Button
        android:id="@+id/buttonSeasons"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_seasons"
        android:drawablePadding="3dp"
        android:gravity="left|center_vertical"
        android:onClick="buttonSeasonsClick"
        android:text="@string/buttonSeasons"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />


</android.support.constraint.ConstraintLayout>
